Fix ASCS Lab logo rendering too large
By default the logo is way to big when viewport is maximized.

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 /* Logos                                                         */
 /*****************************************************************************/
 
-#logo {
+#ascs_lab_logo {
     max-width: 50%;
     padding: 10px;
 }
